--- a/package.json
+++ b/package.json
@@ -15,16 +15,10 @@
     "nodemon": "^3.1.0"
   },
   "dependencies": {
-    "@hapi/joi": "^17.1.1",
-    "app-root-path": "^3.1.0",
-    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.4.0",
-    "serve-index": "^1.9.1"
+    "express": "^4.19.2"
   }
 }
